--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gårda Bakeshop</title>
     <link rel="stylesheet" href="css/css.css">
+    <style class="bg_image"> body{background-image: url("img/background_bread.jpg");}</style>
 </head>
+
 <body id="body">
     <div id="index">
 
-        <header class="header_index"> Välkommen till Gårda Bakeshop</header>
+        <header class="header"> <h1>Välkommen till Gårda Bakeshop</h1></header>
 
         <nav class="navigation">
-            <li a href="index.html">Hem</li>
-            <li a href="sortiment.html">Sortiment</li>
-            <li a href="catering.html">Catering</li>
-            <li a href="kontakt.html">Kontakta oss</li>
+            <a href="index.html">Hem</a>
+            <a href="sortiment.html">Sortiment</a>
+            <a href="catering.html">Catering</a>
+            <a href="kontakt.html">Kontakta oss</a>  
         </nav>
 
         <main class="main_index">
