--- a/sortiment.html
+++ b/sortiment.html
@@ -5,19 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gårda Bakeshop</title>
     <link rel="stylesheet" href="css/css.css">
+    <style class="bg_image"> body{background-image: url("img/background_bread.jpg");}</style>
 </head>
 <body id="body">
     <div id="sortiment">
 
-        <header class="header_sortiment">Vårt sortiment</header>
+        <header class="header"><h1>Vårt sortiment</h1></header>
  
         <nav class="navigation">
-            <ul>
-                <li a href="index.html">Hem</li>
-                <li a href="sortiment.html">Sortiment</li>
-                <li a href="catering.html">Catering</li>
-                <li a href="kontakt.html">Kontakta oss</li>
-            </ul>  
+                <a href="index.html">Hem</a>
+                <a href="sortiment.html">Sortiment</a>
+                <a href="catering.html">Catering</a>
+                <a href="kontakt.html">Kontakta oss</a>  
         </nav>
 
         <nav class="sortiment_links">
@@ -46,7 +45,7 @@
             </section>
 
             <section id=" varm_mat">
-                <img src="../img" alt="Bild på varm mat">
+                <img src="../img/food_assortment.jpg" alt="Bild på pasta">
                 <figcaption>All vår mat tillagas i vårt eget kök.
                     I vårat sortiment ingår: <ul>
                         <li>Dagens pasta</li>
@@ -94,12 +93,20 @@
             </section>
 
             <section id="tårtor&bakelser">
-                <img src="../img/cupcake_assortment.jpg" alt="Bild på bakelser">
+                <img src="../img/cake_assortment.jpg" alt="Bild på bakelser">
                 <figcaption>
                     Alla våra tårtor och bakelser göras i vårt eget konditori.
                     I vårt sortiment ingår: <ul>
-                        <li></li>
-                        <li></li>
+                        <li>Prinsesstårta</li>
+                        <li>Swarswaldstårta</li>
+                        <li>Moccatårta</li>
+                        <li>Sommartårta</li>
+                        <li>Chokladtårta</li>
+                        <li>Passionmoussetårta</li>
+                        <li>Jordgubbmoussetårta</li>
+                        <li>Budapestlängd</li>
+                        <li>Pecannöt och kola cheescake</li>
+                        <li>Halloncheesecake</li>
                     </ul>
                 </figcaption>
             </section>
