--- a/catering.html
+++ b/catering.html
@@ -9,13 +9,13 @@
 <body id="body">
     <div id="sortiment">
 
-        <header class="header_sortiment">Catering</header>
+        <header class="header"><h1>Catering</h1></header>
 
         <nav class="navigation">
-            <li a href="index.html">Hem</li>
-            <li a href="sortiment.html">Sortiment</li>
-            <li a href="catering.html">Catering</li>
-            <li a href="kontakt.html">Kontakta oss</li>
+            <a href="index.html">Hem</a>
+            <a href="sortiment.html">Sortiment</a>
+            <a href="catering.html">Catering</a>
+            <a href="kontakt.html">Kontakta oss</a>  
         </nav>
 
 
