--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gårda Bakeshop</title>
     <link rel="stylesheet" href="css/css.css">
-    <style class="bg_image"> body{background-image: url("img/background_bread.jpg");}</style>
+    
 </head>
 
 <body id="body">
@@ -23,18 +23,19 @@
         <main class="main_index">
             <section class="öppetider">
                 <h4>Öppetider</h4>
-                <li class="days">
-                    <ul>Mån-Fre</ul>
-                    <ul>Lör-Sön</ul>
-                    <ul>Röda Dagar</ul>
-                </li>
+                <div class="dagar">
+                    Mån-Fre
+                    Lör-Sön
+                    Röda dagar
+                </div>
 
-                <li class="time">
-                    <ul>07:00-15:00</ul>
-                    <ul>Stängt</ul>
-                    <ul>Stängt</ul>
-                </li>
+                <div class="tider">
+                    07:00-15:00
+                    Stängt
+                    Stängt
+                 </div>
 
+                
             </section>
 
             <section class="om_oss">
@@ -52,7 +53,7 @@
         </main>
 
         <footer class="footer">
-            <p>Gårda Bakeshop - Gårdavägen 1 - 031-40 16 96 - gardabakeshop@gmail.com</p>
+            Gårda Bakeshop - Gårdavägen 1 - 031-40 16 96 - gardabakeshop@gmail.com
         </footer>
 
 
