--- a/sortiment.html
+++ b/sortiment.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gårda Bakeshop</title>
     <link rel="stylesheet" href="css/css.css">
-    <style class="bg_image"> body{background-image: url("img/background_bread.jpg");}</style>
+    
 </head>
 <body id="body">
     <div id="sortiment">
@@ -21,10 +21,10 @@
 
         <nav class="sortiment_links">
             <a href="#mackor">Mackor</a>
-            <a href="#varm_mat">Varm mat</a>
+            <a href="#varmmat">Varm mat</a>
             <a href="#sallader">Sallader</a>
             <a href="#bullar&kakor">Bullar & kakor</a>
-            <a href="#tårtor&bakelser">Tårtor & bakelser</a>   
+            <a href="#tartor&bakelser">Tårtor & bakelser</a>   
 
         </nav>
 
@@ -32,82 +32,87 @@
             <section id="mackor">
                 <img src="../img/Sandwich_assortment.jpg" alt="Bild på mackor">
                 <figcaption>
-                    Alla våra mackor är gjorda på nybakat bröd.
-                    I vårat sortiment ingår: <ul>
-                        <li>Ost/ost och skinka-fralla</li>
-                        <li>Salami och brieost-ciabatta</li>
-                        <li>Lufttorkad skinka och mozzarella-ciabatta</li>
-                        <li>Köttbullemacka med rödbetsallad</li>
-                        <li>Räkmacka</li>
-                        <li>Äggmacka</li>
-                    </ul>
+                    <p><b>Mackor</b><ul>
+                            <li>Ost/ost och skinka-fralla</li>
+                            <li>Salami och brieost-ciabatta</li>
+                            <li>Lufttorkad skinka och mozzarella-ciabatta</li>
+                            <li>Köttbullemacka med rödbetsallad</li>
+                            <li>Räkmacka</li>
+                            <li>Äggmacka</li>
+                        </ul>
+                    </p>
                 </figcaption>
             </section>
 
-            <section id=" varm_mat">
+            <section id="varmmat">
                 <img src="../img/food_assortment.jpg" alt="Bild på pasta">
-                <figcaption>All vår mat tillagas i vårt eget kök.
-                    I vårat sortiment ingår: <ul>
-                        <li>Dagens pasta</li>
-                        <li>Lasange</li>
-                        <li>Bakad potatis med skagen-,tonfisk- eller kycklingröra</li>
-                        <li>Köttfärspaj</li>
-                        <li>Spenat och fetaostpaj</li>
-                        <li>Pannkakor</li>
-                    </ul>
+                <figcaption>
+                    <p><b>Varm mat</b>
+                        <ul>
+                            <li>Dagens pasta</li>
+                            <li>Lasange</li>
+                            <li>Bakad potatis med skagen-,tonfisk- eller kycklingröra</li>
+                            <li>Köttfärspaj</li>
+                            <li>Spenat och fetaostpaj</li>
+                            <li>Pannkakor</li>
+                        </ul>
+                    </p>
                 </figcaption>
             </section>
 
             <section id="sallader">
                 <img src="../img/Salad_assortment.png" alt="Bild på sallader.">
                 <figcaption>
-                    Alla våra sallader görs med färska ekologiska råvaror.
-                    I vårat sortiment ingår: <ul>
-                        <li>Räksallad med avocado och ägg</li>
-                        <li>Räk-och kräftsallad</li>
-                        <li>Varmrökt laxsallad med avocado</li>
-                        <li>Kyckingsallad med fetaost</li>
-                        <li>Kycklingsallad med avocado</li>
-                        <li>Falafellsallad med hummus</li>
-                    </ul>
+                    <p><b>Sallader</b>
+                        <ul>
+                            <li>Räksallad med avocado och ägg</li>
+                            <li>Räk-och kräftsallad</li>
+                            <li>Varmrökt laxsallad med avocado</li>
+                            <li>Kyckingsallad med fetaost</li>
+                            <li>Kycklingsallad med avocado</li>
+                            <li>Falafellsallad med hummus</li>
+                        </ul>
+                     </p>
                 </figcaption>
             </section>
 
-            <section id="bullar&kakor">
+            <section id="bullarokakor">
                 <img src="../img/Bun_assortment.jpg" alt="Bild på kanelbullar">
                 <figcaption>
-                    Alla våra bullar och kakor kommer från vårt eget konditori.
-                    I vårat sortiment ingår: <ul>
-                        <li>Kanebullar</li>
-                        <li>Kardemummabullar</li>
-                        <li>Chokladmuffins</li>
-                        <li>Vaniljmuffins</li>
-                        <li>Hallongrottor</li>
-                        <li>Biskvier</li>
-                        <li>Mazariner</li>
-                        <li>Chokladbollar</li>
-                        <li>Dammsugare</li>
-                        <li>Kärleksmums</li>
-                    </ul>
+                    <p><b>Bullar och kakor</b>
+                        <ul>
+                            <li>Kanebullar</li>
+                            <li>Kardemummabullar</li>
+                            <li>Chokladmuffins</li>
+                            <li>Vaniljmuffins</li>
+                            <li>Hallongrottor</li>
+                            <li>Biskvier</li>
+                            <li>Mazariner</li>
+                            <li>Chokladbollar</li>
+                            <li>Dammsugare</li>
+                            <li>Kärleksmums</li>
+                        </ul>
+                    </p>
                 </figcaption>
             </section>
 
-            <section id="tårtor&bakelser">
+            <section id="tartorobakelser">
                 <img src="../img/cake_assortment.jpg" alt="Bild på bakelser">
                 <figcaption>
-                    Alla våra tårtor och bakelser göras i vårt eget konditori.
-                    I vårt sortiment ingår: <ul>
-                        <li>Prinsesstårta</li>
-                        <li>Swarswaldstårta</li>
-                        <li>Moccatårta</li>
-                        <li>Sommartårta</li>
-                        <li>Chokladtårta</li>
-                        <li>Passionmoussetårta</li>
-                        <li>Jordgubbmoussetårta</li>
-                        <li>Budapestlängd</li>
-                        <li>Pecannöt och kola cheescake</li>
-                        <li>Halloncheesecake</li>
-                    </ul>
+                    <p><b>Tårtor och bakelser</b>
+                        <ul>
+                            <li>Prinsesstårta</li>
+                            <li>Swarswaldstårta</li>
+                            <li>Moccatårta</li>
+                            <li>Sommartårta</li>
+                            <li>Chokladtårta</li>
+                            <li>Passionmoussetårta</li>
+                            <li>Jordgubbmoussetårta</li>
+                            <li>Budapestlängd</li>
+                            <li>Pecannöt och kola cheescake</li>
+                            <li>Halloncheesecake</li>
+                        </ul>
+                    </p>
                 </figcaption>
             </section>
 
@@ -117,7 +122,7 @@
 
 
         <footer class="footer">
-            <p>Gårda Bakeshop - Gårdavägen 1 - 031-40 16 96 - gardabakeshop@gmail.com</p>
+            Gårda Bakeshop - Gårdavägen 1 - 031-40 16 96 - gardabakeshop@gmail.com
         </footer>
 
 
