--- a/sortiment.html
+++ b/sortiment.html
@@ -23,8 +23,8 @@
             <a href="#mackor">Mackor</a>
             <a href="#varmmat">Varm mat</a>
             <a href="#sallader">Sallader</a>
-            <a href="#bullar&kakor">Bullar & kakor</a>
-            <a href="#tartor&bakelser">Tårtor & bakelser</a>   
+            <a href="#bullarokakor">Bullar & kakor</a>
+            <a href="#tartorobakelser">Tårtor & bakelser</a>   
 
         </nav>
 
