--- a/catering.html
+++ b/catering.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/css.css">
 </head>
 <body id="body">
-    <div id="sortiment">
+    <div id="catering">
 
         <header class="header"><h1>Catering</h1></header>
 
@@ -18,12 +18,21 @@
             <a href="kontakt.html">Kontakta oss</a>  
         </nav>
 
+        <main class="main_cater">
+
+        <section class="cater_info">
+            <h4>Catering från Gårda Bakeshop</h4>
+            <p>Alla produkter listade på <a href="sortiment.html" class="a_c">Sortiment</a> kan beställas och lite mer.</p>
+
+                <p>Beställning av catering görs med fördel på <a href="mailto:gardabakeshop@gmail.com" class="a_c">mail</a>, 
+                <a href="tel:031-40 16 96" class="a_c"> telefon</a> eller på <a href="catering2.html" class="a_c">hemsidan</a>.</p>   
+        </section>
+
+        </main> 
 
         <footer class="footer">
             <p>Gårda Bakeshop - Gårdavägen 1 - 031-40 16 96 - gardabakeshop@gmail.com</p>
         </footer>
-
-
 
     </div>
 </body>
