--- a/kontakt.html
+++ b/kontakt.html
@@ -8,7 +8,7 @@
     
 </head>
 <body id="body">
-    <div id="sortiment">
+    <div id="kontakt">
 
         <header class="header"><h1>Kontakta oss</h1> </header>
 
@@ -20,34 +20,34 @@
         </nav>
 
         <main class="main_kontakt">
-            <div id="tel">
-                <h4>Telefon:</h4><a href="tel:031-40 16 96" class="a_k"> 031-30 16 96</a>
-            </div>
+            <section class="kontakt_info">
 
-            <section id="mail">
-                <h4>E-mail:</h4> <a href="mailto:gardabakeshop@gmail.com" class="a_k">gardabakeshop@gmail.com</a>
-            </section>
+                <div id="info">
+                    <h4>Telefon:</h4><a href="tel:031-40 16 96" class="a_k"> 031-30 16 96</a>
+                </div>
 
-            <section id="insta">
-                <h4>Instagram:</h4> <a href="https://www.instagram.com/gardabakeshop/?hl=sv" class="a_k">gardabakeshop</a>
-            </section>
+                <div id="info">
+                    <h4>E-mail:</h4> <a href="mailto:gardabakeshop@gmail.com" class="a_k">gardabakeshop@gmail.com</a>
+                </div>
 
-            <section id="faceb">
-                <h4>Facebook:</h4> <a href="https://sv-se.facebook.com/GardaBakeshop" class="a_k">@GardaBakeshop</a>
-            </section>
+                <div id="info">
+                    <h4>Instagram:</h4> <a href="https://www.instagram.com/gardabakeshop/?hl=sv" class="a_k">gardabakeshop</a>
+                </div>
 
-            <section id="location">
-                <h4>Adress:</h4> <a href="https://www.google.com/maps/place/G%C3%A5rda+Bakeshop/@57.7043384,11.9911682,18.48z/data=!4m13!1m7!3m6!1s0x464ff3827869ade1:0xf6fda970de0bc36a!2zR8OlcmRhdsOkZ2VuIDEsIDQxMiA1MCBHw7Z0ZWJvcmc!3b1!8m2!3d57.7042858!4d11.9915432!3m4!1s0x464ff3827805e8c5:0xf4656abe7e0161e7!8m2!3d57.7043962!4d11.9921578" class="a_k">Gårdavägen 1, Göteborg</a>   
+                <div id="info">
+                    <h4>Facebook:</h4> <a href="https://sv-se.facebook.com/GardaBakeshop" class="a_k">@GardaBakeshop</a>
+                </div>
+
+                <div id="info">
+                    <h4>Adress:</h4> <a href="https://www.google.com/maps/place/G%C3%A5rda+Bakeshop/@57.7043384,11.9911682,18.48z/data=!4m13!1m7!3m6!1s0x464ff3827869ade1:0xf6fda970de0bc36a!2zR8OlcmRhdsOkZ2VuIDEsIDQxMiA1MCBHw7Z0ZWJvcmc!3b1!8m2!3d57.7042858!4d11.9915432!3m4!1s0x464ff3827805e8c5:0xf4656abe7e0161e7!8m2!3d57.7043962!4d11.9921578" class="a_k">Gårdavägen 1, Göteborg</a>   
+                </div>
+
             </section>
         </main>
-
-
 
         <footer class="footer">
             Gårda Bakeshop - Gårdavägen 1 - 031-40 16 96 - gardabakeshop@gmail.com
         </footer>
-
-
 
     </div>
 </body>
