--- a/catering.html
+++ b/catering.html
@@ -11,7 +11,8 @@
 
         <header class="header"><h1>Catering</h1></header>
 
-        <nav class="navigation">
+        <nav class="navigation" id="navigation" class="shown-navigation">
+            <div id = navbar-btn></div>
             <a href="index.html">Hem</a>
             <a href="sortiment.html">Sortiment</a>
             <a href="catering.html">Catering</a>
@@ -20,20 +21,21 @@
 
         <main class="main_cater">
 
-        <section class="cater_info">
-            <h4>Catering från Gårda Bakeshop</h4>
-            <p>Alla produkter listade på <a href="sortiment.html" class="a_c">Sortiment</a> kan beställas och lite mer.</p>
+            <section class="cater_info">
+                <h4>Catering från Gårda Bakeshop</h4>
+                <p>Alla produkter listade på <a href="sortiment.html" class="a_c">Sortiment</a> kan beställas och lite mer.</p>
 
-                <p>Beställning av catering görs med fördel på <a href="mailto:gardabakeshop@gmail.com" class="a_c">mail</a>, 
-                <a href="tel:031-40 16 96" class="a_c"> telefon</a> eller på <a href="catering2.html" class="a_c">hemsidan</a>.</p>   
-        </section>
+                    <p>Beställning av catering görs med fördel på <a href="mailto:gardabakeshop@gmail.com" class="a_c">mail</a>, 
+                    <a href="tel:031-401696" class="a_c"> telefon</a> eller på <a href="catering2.html" class="a_c">hemsidan</a>.</p>   
+            </section>
 
-        </main> 
+        </main>
 
         <footer class="footer">
-            <p>Gårda Bakeshop - Gårdavägen 1 - 031-40 16 96 - gardabakeshop@gmail.com</p>
+            Gårda Bakeshop - Gårdavägen 1 - 031-40 16 96 - gardabakeshop@gmail.com
         </footer>
 
     </div>
 </body>
+<script src="js/navigation.js"></script>
 </html>
