--- a/sortiment.html
+++ b/sortiment.html
@@ -12,11 +12,12 @@
 
         <header class="header"><h1>Vårt sortiment</h1></header>
  
-        <nav class="navigation">
-                <a href="index.html">Hem</a>
-                <a href="sortiment.html">Sortiment</a>
-                <a href="catering.html">Catering</a>
-                <a href="kontakt.html">Kontakta oss</a>  
+        <nav class="navigation" id="navigation" class="shown-navigation">
+            <div id = navbar-btn></div>
+            <a href="index.html">Hem</a>
+            <a href="sortiment.html">Sortiment</a>
+            <a href="catering.html">Catering</a>
+            <a href="kontakt.html">Kontakta oss</a>  
         </nav>
 
         <nav class="sortiment_links">
@@ -29,7 +30,7 @@
         </nav>
 
         <main class="main_sortiment">
-            <section id="mackor">
+            <div id="mackor">
                 <img src="../img/Sandwich_assortment.jpg" alt="Bild på mackor">
                 <figcaption>
                     <p><b>Mackor</b><ul>
@@ -42,9 +43,9 @@
                         </ul>
                     </p>
                 </figcaption>
-            </section>
+            </div>
 
-            <section id="varmmat">
+            <div id="varmmat">
                 <img src="../img/food_assortment.jpg" alt="Bild på pasta">
                 <figcaption>
                     <p><b>Varm mat</b>
@@ -58,9 +59,9 @@
                         </ul>
                     </p>
                 </figcaption>
-            </section>
+            </div>
 
-            <section id="sallader">
+            <div id="sallader">
                 <img src="../img/Salad_assortment.png" alt="Bild på sallader.">
                 <figcaption>
                     <p><b>Sallader</b>
@@ -74,9 +75,9 @@
                         </ul>
                      </p>
                 </figcaption>
-            </section>
+            </div>
 
-            <section id="bullarokakor">
+            <div id="bullarokakor">
                 <img src="../img/Bun_assortment.jpg" alt="Bild på kanelbullar">
                 <figcaption>
                     <p><b>Bullar och kakor</b>
@@ -94,9 +95,9 @@
                         </ul>
                     </p>
                 </figcaption>
-            </section>
+            </div>
 
-            <section id="tartorobakelser">
+            <div id="tartorobakelser">
                 <img src="../img/cake_assortment.jpg" alt="Bild på bakelser">
                 <figcaption>
                     <p><b>Tårtor och bakelser</b>
@@ -114,7 +115,7 @@
                         </ul>
                     </p>
                 </figcaption>
-            </section>
+            </div>
 
 
         </main>
@@ -129,4 +130,5 @@
 
     </div>
 </body>
+<script src="js/navigation.js"></script>
 </html>
