--- a/catering2.html
+++ b/catering2.html
@@ -11,7 +11,8 @@
 
         <header class="header"><h1>Catering</h1></header>
 
-        <nav class="navigation">
+        <nav class="navigation" id="navigation" class="shown-navigation">
+            <div id = navbar-btn></div>
             <a href="index.html">Hem</a>
             <a href="sortiment.html">Sortiment</a>
             <a href="catering.html">Catering</a>
@@ -54,4 +55,5 @@
 
     </div>
 </body>
+<script src="js/navigation.js"></script>
 </html>
