--- a/kontakt.html
+++ b/kontakt.html
@@ -12,7 +12,8 @@
 
         <header class="header"><h1>Kontakta oss</h1> </header>
 
-        <nav class="navigation">
+        <nav class="navigation" id ="navigation" class="shown-navigation">
+            <div id = navbar-btn></div>
             <a href="index.html">Hem</a>
             <a href="sortiment.html">Sortiment</a>
             <a href="catering.html">Catering</a>
@@ -22,23 +23,23 @@
         <main class="main_kontakt">
             <section class="kontakt_info">
 
-                <div id="info">
-                    <h4>Telefon:</h4><a href="tel:031-40 16 96" class="a_k"> 031-30 16 96</a>
+                <div class="info">
+                    <h4>Telefon:</h4><a href="tel:031-401696" class="a_k"> 031-30 16 96</a>
                 </div>
 
-                <div id="info">
+                <div class="info">
                     <h4>E-mail:</h4> <a href="mailto:gardabakeshop@gmail.com" class="a_k">gardabakeshop@gmail.com</a>
                 </div>
 
-                <div id="info">
+                <div class="info">
                     <h4>Instagram:</h4> <a href="https://www.instagram.com/gardabakeshop/?hl=sv" class="a_k">gardabakeshop</a>
                 </div>
 
-                <div id="info">
+                <div class="info">
                     <h4>Facebook:</h4> <a href="https://sv-se.facebook.com/GardaBakeshop" class="a_k">@GardaBakeshop</a>
                 </div>
 
-                <div id="info">
+                <div class="info">
                     <h4>Adress:</h4> <a href="https://www.google.com/maps/place/G%C3%A5rda+Bakeshop/@57.7043384,11.9911682,18.48z/data=!4m13!1m7!3m6!1s0x464ff3827869ade1:0xf6fda970de0bc36a!2zR8OlcmRhdsOkZ2VuIDEsIDQxMiA1MCBHw7Z0ZWJvcmc!3b1!8m2!3d57.7042858!4d11.9915432!3m4!1s0x464ff3827805e8c5:0xf4656abe7e0161e7!8m2!3d57.7043962!4d11.9921578" class="a_k">Gårdavägen 1, Göteborg</a>   
                 </div>
 
@@ -51,4 +52,5 @@
 
     </div>
 </body>
+<script src="js/navigation.js"></script>
 </html>
